--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,7 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <title>
@@ -13,10 +14,52 @@
         href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
 
     <script src="https://cdn.tailwindcss.com"></script>
+
+    <style type="text/tailwindcss">
+        @layer components {
+            .form-control {
+                @apply p-2 shadow-sm rounded-sm placeholder:text-gray-400 w-full text-sm font-normal text-gray-800 outline-none ring-1 ring-gray-300 focus:ring-2;
+            }
+
+            .btn {
+                @apply w-full text-center ring-1 outline-none rounded-sm shadow-sm text-sm font-medium text-gray-100 p-2;
+            }
+
+            .input-primary {
+                @apply form-control focus:ring-2 focus:ring-blue-600;
+            }
+
+            .input-success {
+                @apply form-control focus:ring-green-600;
+            }
+
+            .input-danger {
+                @apply form-control focus:ring-red-600;
+            }
+
+            .btn-primary {
+                @apply btn bg-blue-600 ring-blue-600 hover:bg-opacity-80;
+            }
+
+            .btn-success {
+                @apply btn bg-green-600 ring-green-600 hover:bg-opacity-80;
+            }
+
+            .btn-danger {
+                @apply btn bg-red-600 ring-red-600 hover:bg-opacity-80;
+            }
+
+            .btn-secondary {
+                @apply btn bg-gray-600 ring-gray-600 hover:bg-opacity-80;
+            }
+        }
+    </style>
 </head>
+
 <body>
     {% block main %}{% endblock %}
 
     {% block scripts %}{% endblock %}
 </body>
+
 </html>
