--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,25 @@
 {% block title %}Index{% endblock %}
 
 {% block main %}
-<div class="text-2xl text-neutral-800 font-bold">
-    Index
-</div>
+<main class="grid grid-cols-12 h-screen">
+    {% include "includes/sidebar.html" %}
+
+    <section class="col-span-12 md:col-span-10">
+        <div class="flex flex-col">
+            <header class="flex justify-between items-center border-b h-14 px-4">
+                <div>
+                    <h4 class='md:hidden flex-1 text-2xl text-gray-700 font-bold'>Copapi</h4>
+                </div>
+                <form action="{% url 'logout' %}" method="post">{% csrf_token %}
+                    <button class="text-base font-medium text-neutral-800 hover:text-blue-600" type="submit">
+                        Cerrar
+                    </button>
+                </form>
+            </header>
+            <section class="md:py-2 md:px-4 h-[calc(100vh_-_3.5rem)]">
+                {% block content %}{% endblock %}
+            </section>
+        </div>
+    </section>
+</main>
 {% endblock %}
