--- a/templates/proyecto_delete_confirmation.html
+++ b/templates/proyecto_delete_confirmation.html
@@ -3,7 +3,14 @@
 {% block title %}Poryectos{% endblock %}
 
 {% block content %}
-    <div>
-        Delete confirmation
+<form class="w-1/2 flex flex-col gap-6" method="POST">{% csrf_token %}
+    <p class="fs-4">¿Esta seguro que desea eliminar el producto "{{ object }}"?</p>
+    {{ form }}
+    <div class="flex gap-2">
+        <a href="{% url 'proyectos' %}" class="btn btn-secondary flex-fill">Cancelar</a>
+        <button type="submit" class="btn btn-danger flex-fill">
+            Si, Eliminar
+        </button>
     </div>
+</form>
 {% endblock %}
