--- a/templates/proyecto_form.html
+++ b/templates/proyecto_form.html
@@ -4,8 +4,8 @@
 {% block title %}Poryectos{% endblock %}
 
 {% block content %}
-    <section class="w-1/2 mx-auto">
-        <form class="flex flex-col gap-6" action="." method="post">{% csrf_token %}
+    <section class="h-[calc(100vh_-_5rem)] overflow-auto">
+        <form class="flex flex-col gap-6 w-1/2 mx-auto" action="." method="post">{% csrf_token %}
             <h6 class="text-center text-xl font-bold text-neutral-800">
                 {% if object %}Editar{% else %}Nuevo{% endif %} Proyecto
             </h6>
@@ -46,11 +46,9 @@
             </div>
 
             <div class="flex gap-2">
-                {% if object %}
-                    <a class="flex-1 btn btn-secondary" href="#">
-                        Cancelar
-                    </a>
-                {% endif %}
+                <a class="flex-1 btn btn-secondary" href="{% url 'proyectos' %}">
+                    Cancelar
+                </a>
                 <button type="submit" class="flex-1 btn btn-primary">
                     Guardar
                 </button>
