--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -6,7 +6,7 @@
 {% block main %}
 <main class="h-screen flex items-center justify-center">
 	<section class="w-full sm:w-1/2 lg:w-1/3">
-		<h4 class='text-2xl font-bold text-gray-800 text-center py-2'>PeñaVal</h4>
+		<h4 class='text-2xl font-bold text-gray-800 text-center py-2'>Copapi</h4>
 
 		<form class="flex flex-col gap-6 px-4" action="{% url 'login' %}" method="POST">{% csrf_token %}
 			{% if form.errors %}
