--- a/templates/proyecto_detalle.html
+++ b/templates/proyecto_detalle.html
@@ -22,7 +22,12 @@
                 <p class="text-sm font-semibold text-neutral-900">Materiales</p>
                 {% for material in materiales %}
                       <div class="flex flex-col gap-1 w-1/2">
-                        <label for="{{ material.pk }}" class="text-sm font-normal text-neutral-600">{{ material.nombre }}</label>
+                        <label for="{{asignacion.material.pk}}" class="flex flex-col gap-1">
+                            <p class="text-sm font-semibold text-neutral-600">{{ material.nombre }}</p>
+                            <div class="flex justify-between items-center">
+                                <span class="text-xs font-normal text-neutral-600">Stock: {{ material.cantidad }} U</span>
+                            </div>
+                        </label>
                         <input type="number" id="{{material.pk}}" name="{{ material.pk }}" class="form-control" placeholder="0" />
                       </div>
                 {% endfor %}
