--- a/templates/proyecto_envio_detalle.html
+++ b/templates/proyecto_envio_detalle.html
@@ -4,7 +4,7 @@
 
 {% block content %}
     <section class="mx-auto w-1/2 border p-4 flex flex-col gap-4">
-        <h3 class="text-xl font-semibold text-neutral-700">Requerimientos de materiales</h3>
+        <h3 class="text-xl font-semibold text-neutral-700">Envio de materiales</h3>
 
         <div class="flex justify-between border-b pb-4">
             <div class="flex flex-col">
@@ -33,8 +33,8 @@
                                     <label for="{{asignacion.material.pk}}" class="flex flex-col gap-1">
                                         <p class="text-sm font-semibold text-neutral-600">{{ asignacion.material.nombre }}</p>
                                         <div class="flex justify-between items-center">
-                                        <span class="text-xs font-normal text-neutral-600">Stock: {{ asignacion.material.cantidad }} U</span>
-                                        <span class="text-xs font-normal text-neutral-600">Pedido: {{asignacion.cantidad_necesaria}} U</span>
+                                            <span class="text-xs font-normal text-neutral-600">Stock: {{ asignacion.material.cantidad }} U</span>
+                                            <span class="text-xs font-normal text-neutral-600">Pedido: {{asignacion.cantidad_necesaria}} U</span>
                                         </div>
                                     </label>
                                     <input type="number" id="{{asignacion.material.pk}}" name="{{asignacion.material.pk}}" class="form-control" placeholder="0" />
