--- a/templates/proyectos.html
+++ b/templates/proyectos.html
@@ -3,84 +3,86 @@
 {% block title %}Poryectos{% endblock %}
 
 {% block content %}
-    <section class="flex justify-between items-center">
-        <div>
-            <a href="{% url 'proyecto-create' %}" class="btn btn-primary">
-                Nuevo
-            </a>
+<section class="flex justify-between items-center">
+    <div>
+        <a href="{% url 'proyecto-create' %}" class="btn btn-primary">
+            Nuevo
+        </a>
+    </div>
+    <form class="w-1/3 flex gap-2" method="get" action=".">
+        <div class="flex-1">
+            <input type="text" class="form-control" placeholder="Buscar..." name="search"
+                value="{{ request.GET.search }}" />
         </div>
-        <form class="w-1/3 flex gap-2" method="get" action=".">
-            <div class="flex-1">
-                <input
-                    type="text"
-                    class="form-control"
-                    placeholder="Buscar..."
-                    name="search"
-                    value="{{ request.GET.search }}"
-                />
-            </div>
-            <div class="w-12">
-                <button class="btn btn-success">
-                    <i class="las la-search la-lg"></i>
-                </button>
-            </div>
-        </form>
-    </section>
-    <section class="overflow-auto h-[calc(100vh_-_7.5rem)] md:h-[calc(100vh_-_9rem)] py-2 px-4 md:p-0 border-b mt-5">
-        <table class="min-w-full">
-            <thead>
-                <tr class="sticky top-0 bg-gray-200 text-left text-gray-800 text-sm font-semibold">
-                    <th class="p-2 uppercase border">id</th>
-                    <th class="p-2 uppercase border">nombre</th>
-                    <th class="p-2 uppercase border">tipo</th>
-                    <th class="p-2 uppercase border">barrio</th>
-                    <th class="p-2 uppercase border">a. potable</th>
-                    <th class="p-2 uppercase border">alcant.</th>
-                    <th class="p-2 uppercase border">inicio</th>
-                    <th class="p-2 uppercase border">fin</th>
-                    <th class="p-2 uppercase border">estado</th>
-                    <th class="p-2 uppercase border"></th>
-                </tr>
-            </thead>
-            <tbody class='bg-white divide-y divide-gray-200'>
-                {% for object in object_list %}
-                    <tr class="text-left text-sm font-normal text-gray-900">
-                        <td class="p-2">{{ object.pk }}</td>
-                        <td class="p-2">{{ object.nombre }}</td>
-                        <td class="p-2">{{ object.tipo.nombre }}</td>
-                        <td class="p-2">{{ object.barrio.nombre }}</td>
-                        <td class="px-2">
-                            {% if object.barrio.servicio_agua is True %}
-                                <i class="las la-check-circle la-2x text-green-600"></i>
-                            {% else %}
-                                <i class="las la-times-circle la-2x text-red-600"></i>
-                            {% endif %}
-                        </td>
-                        <td class="px-2">
-                            {% if object.barrio.servicio_alcantarillado is True %}
-                                <i class="las la-check-circle la-2x text-green-600"></i>
-                            {% else %}
-                                <i class="las la-times-circle la-2x text-red-600"></i>
-                            {% endif %}
-                        </td>
-                        <td class="p-2">{{ object.fecha_inicio|date:"d/m/Y" }}</td>
-                        <td class="p-2">{{ object.fecha_fin|date:"d/m/Y" }}</td>
-                        <td class="p-2">{{ object.get_estado_display }}</td>
-                        <td class="flex gap-2 items-center justify-center h-12">
-                            <div class="w-8">
-                                <a href="{% url 'proyecto-update' object.pk %}" class="btn-success">
-                                    <i class="las la-pen la-lg"></i>
-                                </a>
-                            </div>
-                            <div class="w-8">
-                                <a href="{% url 'proyecto-delete' object.pk %}" class="btn-danger">
-                                    <i class="las la-trash-alt la-lg"></i>
-                                </a>
-                            </div>
-                        </td>
-                    </tr>
-                {% endfor %}
-            </tbody>
-        </table>
-    </section>
+        <div class="w-12">
+            <button class="btn btn-success">
+                <i class="las la-search la-lg"></i>
+            </button>
+        </div>
+    </form>
+</section>
+<section class="overflow-auto h-[calc(100vh_-_7.5rem)] md:h-[calc(100vh_-_9rem)] py-2 px-4 md:p-0 border-b mt-5">
+    <table class="min-w-full">
+        <thead>
+            <tr class="sticky top-0 bg-gray-200 text-left text-gray-800 text-sm font-semibold">
+                <th class="p-2 uppercase border">id</th>
+                <th class="p-2 uppercase border">nombre</th>
+                <th class="p-2 uppercase border">tipo</th>
+                <th class="p-2 uppercase border">barrio</th>
+                <th class="p-2 uppercase border">a. potable</th>
+                <th class="p-2 uppercase border">alcant.</th>
+                <th class="p-2 uppercase border">inicio</th>
+                <th class="p-2 uppercase border">fin</th>
+                <th class="p-2 uppercase border">estado</th>
+                <th class="p-2 uppercase border"></th>
+            </tr>
+        </thead>
+        <tbody class='bg-white divide-y divide-gray-200'>
+            {% for object in object_list %}
+            <tr class="text-left text-sm font-normal text-gray-900">
+                <td class="p-2">{{ object.pk }}</td>
+                <td class="p-2">{{ object.nombre }}</td>
+                <td class="p-2">{{ object.tipo.nombre }}</td>
+                <td class="p-2">{{ object.barrio.nombre }}</td>
+                <td class="px-2">
+                    {% if object.barrio.servicio_agua is True %}
+                    <i class="las la-check-circle la-2x text-green-600"></i>
+                    {% else %}
+                    <i class="las la-times-circle la-2x text-red-600"></i>
+                    {% endif %}
+                </td>
+                <td class="px-2">
+                    {% if object.barrio.servicio_alcantarillado is True %}
+                    <i class="las la-check-circle la-2x text-green-600"></i>
+                    {% else %}
+                    <i class="las la-times-circle la-2x text-red-600"></i>
+                    {% endif %}
+                </td>
+                <td class="p-2">{{ object.fecha_inicio|date:"d/m/Y" }}</td>
+                <td class="p-2">{{ object.fecha_fin|date:"d/m/Y" }}</td>
+                <td class="p-2">{{ object.get_estado_display }}</td>
+                <td class="flex gap-2 items-center justify-center h-12">
+                    <div class="w-8">
+                        <a href="{% url 'proyecto-update' object.pk %}" class="btn-success">
+                            <i class="las la-pen la-lg"></i>
+                        </a>
+                    </div>
+                    <div class="w-8">
+                        <a href="{% url 'proyecto-delete' object.pk %}" class="btn-danger">
+                            <i class="las la-trash-alt la-lg"></i>
+                        </a>
+                    </div>
+                    <div class="w-8">
+                        {% if object.estado == 3 %}
+                        <a href="{% url 'proyecto-comment' object.pk %}" class="btn-secondary">
+                            <i class="las la-comment la-lg"></i>
+                        </a>
+                        {% endif %}
+                    </div>
+                </td>
+            </tr>
+            {% endfor %}
+        </tbody>
+    </table>
+</section>
 {% endblock %}
